--- a/src/components/randomGet/randomGet.css
+++ b/src/components/randomGet/randomGet.css
@@ -1,5 +1,5 @@
 .button {
-    margin-top: 25px;
+    margin: 25px 15px;
     background-color: #4CAF50;
     color: black;
     padding: 10px 20px;
@@ -46,4 +46,9 @@
 
 .findButton:focus {
     outline: none;
+}
+.divOfButton{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
